# hara-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
install/: debian.sh  powershell.ps1  win-powershell.ps1
src/: cli.rs  main.rs
src/commands/: mod.rs
src/commands/foundry/: mod.rs
src/commands/foundry/contract/uc/: mod.rs
src/commands/foundry/contract/uc/templates/: contract_v2.rs  storage.rs  storage_v2.rs  test_limits.rs  view.rs  workflow_ci.rs
src/commands/foundry/init/: files.rs  git.rs  mod.rs
src/commands/foundry/install/: mod.rs  shell.rs
src/commands/hns/: mod.rs
src/commands/hns/codex/: README.md  mod.rs  parser.rs  tests.rs
src/commands/hns/codex/decode/: mod.rs
src/commands/hns/codex/encode/: mod.rs
src/commands/hns/codex/inspect/: mod.rs
src/commands/hns/register/: client.rs  mod.rs  ops.rs  utils.rs
src/commands/init/: mod.rs
src/commands/install/: mod.rs
src/commands/uc/: mod.rs
src/commands/uc/templates/: contract.rs  deploy.rs  deploy_upgrade.rs  errors.rs  events.rs  mod.rs  storage.rs  structs.rs  test.rs  view.rs
src/utils/: config.rs  forge.rs  fs.rs  mod.rs  names.rs  prompt.rs
tests/: integration_test.rs
