[package]
name = "hara"
version = "0.2.72"
edition = "2021"
description = "A CLI scaffolding tool for HARA"
license = "MIT"
repository = "https://github.com/meQlause/hara-cli"

[[bin]]
name = "hara"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
heck = "0.5"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
tempfile = "3.27.0"
