[package]
name = "hara"
version = "0.3.0"
edition = "2021"
description = "A verstile CLI tool for HARA"
license = "MIT"
repository = "https://github.com/meQlause/hara-cli"

[[bin]]
name = "hara"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
heck = "0.5"
alloy = { version = "2", features = ["full"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tiny-keccak = { version = "2", features = ["keccak"] }

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
tempfile = "3.27.0"
